Fix: Prevents button jerk on mobile menu select

--- a/src/App.css
+++ b/src/App.css
@@ -207,8 +207,11 @@ div.certification-details, div.certification-list, div.project-details, div.proj
 @media only screen and (max-width: 600px) {
   div.hamburger-menu {
     display: block;
-    min-width: 90px;
     text-align: right;
+  }
+
+  nav {
+    min-width: 96px;
   }
 
   .page-link {
